<resources>
    <string name="qingshaohou">请稍后……</string>
    <string name="app_name">木联网T</string>
    <string name="login">登录</string>
    <string name="zhanghu">账户:</string>
    <string name="mima">密码:</string>
    <string name="mulianwang">木联网</string>
    <string name="wangjimima">忘记密码</string>
    <!--忘记密码-->
    <string name="getcode">获取验证码</string>
    <string name="code">验证码:</string>
    <string name="newpassword">新密码:</string>
    <string name="makesurepassword">确认密码:</string>
    <string name="submit">提交</string>
    <!--商城首页-->
    <string name="shangcheng">商城</string>
    <string name="shangjia">商家</string>
    <string name="qiugou">求购</string>
    <string name="zixun">资讯</string>
    <string name="wode">我的</string>
    <string name="jiarugouwuche">加入购物车</string>
    <string name="lijigoumai">立即购买</string>
    <string name="tuijianshangjia">推荐商家</string>
    <string name="qihuo">期货</string>
    <!-- 确认下单页-->
    <string name="gegnduoshuxing">更多属性﹀</string>
    <string name="danjia">单价：</string>
    <string name="jinge">金额：</string>
    <string name="shuliang">数   量：</string>
    <string name="quxiao">取消</string>
    <string name="querenxiadan">确认下单</string>
    <string name="yingfujinge">应付金额：</string>
    <string name="shouqi">收起︿
    </string>
    <array name="tiqufangshi">
        <item>自提</item>
        <item>送货</item>
    </array>
    <!-- 下单列表页-->
    <string name="chaxunyue">查询余额</string>
    <string name="xuanzeshouhuodi">选择收货地：</string>
    <string name="queding">确定</string>

    <!-- 购物车-->
    <string name="quanxuan">全选</string>
    <string name="yixuanshangping">已选商品</string>
    <string name="jian">件</string>
    <string name="shanchu">删除</string>
    <string name="baocun">保存修改</string>
    <string name="jiesuan">结算</string>
    <string name="heji">合计</string>
    <string name="yuan">元</string>
    <string name="yuanmeifang">元/方</string>
    <string name="fang">方</string>
    <string name="xuanzhong">选中</string>
    <string name="xiaoji">小计：</string>
    <!-- 求购首页-->
    <string name="woyaobaojia">我要报价</string>
    <string name="tijiao">提交</string>
    <!-- 我的页面-->
    <string name="shezhi">设置</string>
    <string name="wodexinxi">我的信息</string>
    <string name="wodedindan">我的订单</string>
    <string name="qiugouxinxi">求购信息</string>
    <string name="wodeqiugouxinxi">我的求购信息</string>
    <string name="qiugoudingdan">求购订单</string>
    <string name="maijiazhongxin">卖家中心</string>
    <string name="wodeshangpu">我的商铺</string>
    <string name="wodeshangpin">我的商品</string>
    <string name="dingdanliebiao">订单列表</string>
    <string name="tongjichaxun">统计查询</string>
    <string name="wodebaojia">我的报价</string>
    <!-- 我的信息页面-->
    <string name="gerenxinxi">个人信息</string>
    <string name="zizhixinxi">资质信息</string>
    <string name="zhengjianzhaopian">证件照片</string>
    <string name="xiugaimima">修改密码</string>
    <!-- 设置页面-->
    <string name="zhuxiao">注销</string>
    <string name="jianchagengxin">检查更新</string>
    <string name="jinwifi">仅Wi-Fi网络下载图片</string>
    <string name="dangqianweizuixinban">当前为最新版</string>
    <string name="qingchuhuancun">清除缓存</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="guanyuwomen">关于我们</string>
    <!-- 意见反馈页面-->
    <string name="mingcheng">名称  </string>
    <string name="youxiang">邮箱  </string>
    <string name="dianhua">电话  </string>
    <string name="fenlei">分类  </string>
    <string name="liuyanneirong">留言内容</string>
    <string name="qingshurumingcheng">请输入名称</string>
    <string name="qingshurulianxiyouxiang">请输入联系邮箱</string>
    <string name="qingshurulianxidianhua">请输入联系电话</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 我的订单页面-->
    <string name="quanbudingdan">全部订单</string>
    <string name="daifukuan">待付款</string>
    <string name="yifukuan">已付款</string>
    <string name="daifahuo">待发货</string>
    <string name="yichangdindan">异常订单</string>
    <string name="gongji">合计</string>
    <string name="jianshangping">件商品</string>
    <string name="gong">共</string>
    <string name="shenbaoyichang">异常申报</string>
    <string name="guanbidingdan">关闭订单</string>
    <string name="querenshouhuo">确认收货</string>
    <string name="querenfahuo">确认发货</string>
    <string name="shouhuotupian">收货图片：</string>
    <string name="fahuotupian">发货图片：</string>
    <string name="yichangdingdankuohao">（异常订单）</string>
</resources>
