<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sysfunction.activity.GetPasswordActivity">
    <include layout="@layout/layout_title"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_longest"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zhanghu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal"
            android:gravity="right"
            />
        <EditText
            android:id="@+id/getpassword_edit_user"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_longest"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal"
            android:gravity="right"
            />
        <Button
            android:id="@+id/getpassword_btn_getcode"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/getcode"
            android:textSize="@dimen/font_normal"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_longest"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal"
            android:gravity="right"
            />
        <EditText
            android:id="@+id/getpassword_edit_code"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_longest"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/newpassword"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal"
            android:gravity="right"
            />
        <EditText
            android:id="@+id/getpassword_edit_newpassword"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_longest"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/makesurepassword"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal"
            android:gravity="right"
            />
        <EditText
            android:id="@+id/getpassword_edit_makesurepassword"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/getpassword_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="@dimen/font_normal"
        android:layout_margin="@dimen/distance_longest"
        android:textColor="@android:color/black"
         />
</LinearLayout>
