<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dise"
    tools:context="woodnetwork.hebg3.com.woodnetwork.DingDanGuanLi.activity.MyOrderActivity">

    <include
        android:id="@+id/activity_my_order_include"
        layout="@layout/layout_title"></include>


    <RadioGroup
        android:id="@+id/activity_my_order_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_my_order_include"
        android:background="@color/dise"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/activity_my_order_radiobutton_quanbudingdan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/quanbudingdan"
            android:textColor="@drawable/selector_color" />


        <RadioButton
            android:id="@+id/activity_my_order_radiobutton_daifukuan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/daifukuan"
            android:textColor="@drawable/selector_color" />


        <RadioButton
            android:id="@+id/activity_my_order_radiobutton_yifukuan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/yifukuan"
            android:textColor="@drawable/selector_color" />


        <RadioButton
            android:id="@+id/activity_my_order_radiobutton_yichangdindan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/yichangdindan"
            android:textColor="@drawable/selector_color" />


    </RadioGroup>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/activity_my_order_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_my_order_radiogroup"
        android:background="@android:color/white"></com.jcodecraeer.xrecyclerview.XRecyclerView>
</RelativeLayout>
