<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/reltivelayout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="@dimen/distance_normal">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/shopppingcart_adapter_simpledraweeview_head"
            android:layout_width="70dp"
            android:layout_height="70dp"
            fresco:placeholderImage="@drawable/defaultimg" />
        <TextView
            android:id="@+id/shopppingcart_adapter__text_qihuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_smalltest"
            android:text="@string/qihuo"
            android:textColor="@android:color/holo_red_light"
            android:layout_alignParentRight="true"
            android:visibility="gone"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/shopppingcart_adapter_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reltivelayout"
        android:layout_toRightOf="@+id/reltivelayout"
        android:text="杉木"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal" />

    <TextView
        android:id="@+id/shopppingcart_adapter_txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shopppingcart_adapter_txt_name"
        android:layout_marginTop="@dimen/distance_short"
        android:layout_toRightOf="@+id/reltivelayout"
        android:layout_toLeftOf="@+id/shopppingcart_adapter_txt_stock"
        android:text="万达实业有限公司ddddd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal" />

    <TextView
        android:id="@+id/shopppingcart_adapter_txt_productarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopppingcart_adapter_txt_company"
        android:layout_marginTop="@dimen/distance_short"
        android:layout_toRightOf="@+id/reltivelayout"
        android:text="发货地：新西兰"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal" />
    <TextView
        android:id="@+id/shopppingcart_adapter_txt_danjia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reltivelayout"
        android:text="@string/danjia"
        android:layout_toLeftOf="@+id/shopppingcart_adapter_txt_price"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal" />
    <TextView
        android:id="@+id/shopppingcart_adapter_txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reltivelayout"
        android:text="50000000"
        android:layout_toLeftOf="@+id/shopppingcart_adapter_txt_yuanmeifang"
        android:textColor="@color/jiage"
        android:textSize="@dimen/font_normal" />
    <TextView
        android:id="@+id/shopppingcart_adapter_txt_yuanmeifang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reltivelayout"
        android:text="@string/yuanmeifang"
        android:layout_marginRight="@dimen/distance_short"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal" />

    <TextView
        android:id="@+id/shopppingcart_adapter_txt_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shopppingcart_adapter_txt_company"
        android:layout_marginTop="@dimen/distance_short"
        android:text="@string/shuliang"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/shopppingcart_adapter_edit_stock"
        android:layout_toLeftOf="@+id/shopppingcart_adapter_edit_stock"
        android:textSize="@dimen/font_normal" />
    <EditText
        android:id="@+id/shopppingcart_adapter_edit_stock"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="@dimen/font_normal"
        android:layout_below="@+id/shopppingcart_adapter_txt_price"
        android:layout_toLeftOf="@+id/shopppingcart_adapter_txt_fang" />
    <TextView
        android:id="@+id/shopppingcart_adapter_txt_fang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shopppingcart_adapter_txt_company"
        android:layout_marginTop="@dimen/distance_short"
        android:text="@string/fang"
        android:textColor="@android:color/black"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/distance_normal"
        android:layout_alignBaseline="@+id/shopppingcart_adapter_edit_stock"
        android:textSize="@dimen/font_normal" />
    <View
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dise"
        android:layout_marginTop="@dimen/distance_long"
        android:layout_below="@+id/shopppingcart_adapter_txt_productarea"></View>
    <Button
        android:id="@+id/shopppingcart_adapter_btn_shanchu"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin"
        android:background="@null"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/distance_short"
        android:text="@string/shanchu"
        />
    <Button
        android:id="@+id/shopppingcart_adapter_btn_baocun"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin"
        android:background="@null"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_toLeftOf="@+id/shopppingcart_adapter_btn_shanchu"
        android:layout_marginTop="@dimen/distance_short"
        android:text="@string/baocun"
        />
    <CheckBox
        android:id="@+id/shopppingcart_adapter_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_small"
        android:layout_alignBaseline="@+id/shopppingcart_adapter_btn_shanchu"
        android:text="@string/xuanzhong"
        android:layout_below="@+id/lin"/>
    <TextView
        android:id="@+id/shopppingcart_adapter_txt_xiaoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reltivelayout"
        android:text="@string/xiaoji"
        android:layout_marginLeft="@dimen/distance_short"
        android:layout_alignBaseline="@+id/shopppingcart_adapter_btn_shanchu"
        android:layout_toRightOf="@+id/shopppingcart_adapter_checkbox"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_small" />
    <TextView
        android:id="@+id/shopppingcart_adapter_txt_xiaojijinge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reltivelayout"
        android:text="50000000  "
        android:layout_alignBaseline="@+id/shopppingcart_adapter_btn_shanchu"
        android:layout_toRightOf="@+id/shopppingcart_adapter_txt_xiaoji"
        android:textColor="@color/jiage"
        android:textSize="@dimen/font_normal" />
    <TextView
        android:id="@+id/shopppingcart_adapter_txt_yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reltivelayout"
        android:text="@string/yuan"
        android:layout_marginLeft="@dimen/distance_shortest"
        android:layout_alignBaseline="@+id/shopppingcart_adapter_btn_shanchu"
        android:layout_toRightOf="@+id/shopppingcart_adapter_txt_xiaojijinge"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_small" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="@dimen/distance_short"
        android:layout_below="@+id/shopppingcart_adapter_btn_baocun"
        android:background="@color/dise"></View>
</RelativeLayout>
