<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="woodnetwork.hebg3.com.woodnetwork.WoDe.fragment.MyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/title">

        <ImageView
            android:id="@+id/imge_title_left"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/back_left" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_bigest" />

        <TextView
            android:id="@+id/image_title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:padding="10dp"
            android:text="@string/shezhi" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/distance_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myfragment_text_wodexinxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/wodexinxi"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:id="@+id/myfragment_text_wodedingdan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/wodedindan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"
                android:padding="@dimen/distance_normal"
                android:text="@string/qiugouxinxi"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/myfragment_text_wodeqiugouxinxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/wodeqiugouxinxi"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:id="@+id/myfragment_text_qiugoudindan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/qiugoudingdan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"
                android:padding="@dimen/distance_normal"
                android:text="@string/maijiazhongxin"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/myfragment_text_wodeshangpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/wodeshangpu"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:id="@+id/myfragment_text_wodeshangping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/wodeshangpin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:id="@+id/myfragment_text_dingdanliebiao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/dingdanliebiao"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:id="@+id/myfragment_text_tongjichaxun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/tongjichaxun"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

            <TextView
                android:id="@+id/myfragment_text_wodebaojia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:drawableRight="@drawable/back_left"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_longest"
                android:paddingRight="@dimen/distance_longest"
                android:text="@string/wodebaojia"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:background="@color/dise"></View>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
